<resources>
    <string name="app_name">PokemonAndroidApp</string>
    <string name="title_activity_lst_pokemon_view2">LstPokemonView2</string>
    <string name="add_pokemon">add Pokemon</string>
    <string name="pokemonListbutton">Pokemon list</string>
    <string name="lstPokemonButton">PokeTeams</string>
    <string name="teamTextField">Name</string>
    <string name="add_poketeam">Add PokeTeam</string>
    <string name="activity_login_button">LOGIN</string>
    <string name="activity_login_username">Username</string>
    <string name="activity_login_password">Password</string>
</resources>