<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".teams.lstTeam.view.LstTeamsActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/recyclerView_generalPadding" />

    <EditText
        android:id="@+id/teamName"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/goToPokemon"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/teamTextField" />

    <Button
        android:id="@+id/addTeam"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="49dp"
        android:layout_toEndOf="@+id/teamName"
        android:onClick="AddTeam"
        android:text="@string/add_poketeam" />

    <Button
        android:id="@+id/goToPokemon"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="goToPokemon"
        android:text="@string/pokemonListbutton" />
</RelativeLayout>